# OpenGL_Render

./: .gitignore  CMakeLists.txt  Create_Build.bat  Install_vcpkg.bat  README.md  vcpkg.json
DefaultApp/: CMakeLists.txt  default.vert
DefaultApp/Ressources/Shader/: default.frag  default.vert  light.frag  light.vert  skybox.frag  skybox.vert  water.frag  water.vert
DefaultApp/Sources/: default.frag  default.vert  main.cpp
DefaultApp/Sources/Core/: Application.cpp  Application.h  ContextRenderer.h  ProceduralGeneration.h
DefaultApp/Sources/Editor/: ToolsManager.cpp  ToolsManager.h
DefaultApp/Sources/Editor/Observer/: SignalSlot.h
DefaultApp/Sources/Editor/StateMachine/: StateMachine.h
DefaultApp/Sources/Editor/Tools/: ExempleToolImpl.cpp  ExempleToolImpl.h  InfosToolWindow.cpp  InfosToolWindow.h  SettingsToolWindow.cpp  SettingsToolWindow.h  ToolWindow.cpp  ToolWindow.h
DefaultApp/Sources/LowLevel_Renderer/Cameras/: Camera.cpp  Camera.h
DefaultApp/Sources/LowLevel_Renderer/Lights/: DirectionalLight.cpp  DirectionalLight.h  ILight.h  PointLight.cpp  PointLight.h
DefaultApp/Sources/LowLevel_Renderer/Materials/: Material.cpp  Material.h
DefaultApp/Sources/LowLevel_Renderer/Primitive/: Cube.h  CubeLight.h  Plane.h  PrimitiveMesh.h  PrimitiveUtils.h  Shape.h  SkyBox.h  Triangle.h  TriangleList.cpp  TriangleList.h  Vertex.h  Water.h
DefaultApp/Sources/LowLevel_Renderer/Shader/: Shader.cpp  Shader.h
DefaultApp/Sources/LowLevel_Renderer/Texture/: Texture.cpp  Texture.h  TextureGenerator.h
DefaultApp/Sources/LowLevel_Renderer/Viewports/: Viewport.cpp  Viewport.h
DefaultApp/Sources/Main/: main.cpp
DefaultApp/Sources/Math/: Array.h  Array2D.h  Color.h  MathUtility.cpp  MathUtility.h  Matrix.h  Point.h  Transform.h  Vector3D.h
DefaultApp/Sources/Procedural/: Midpoint_Generation.cpp  Midpoint_Generation.h  PerlinNoise.cpp  PerlinNoise.h  ProceduralMethodeBase.cpp  ProceduralMethodeBase.h
DefaultApp/Sources/Procedural/BaseTerrain/: BaseTerrain.cpp  BaseTerrain.h
DefaultApp/Sources/Procedural/FaultFormation/: FaultFormation.cpp  FaultFormation.h
DefaultApp/Sources/Procedural/MidpointDisplacement/: MidpointDisplacement.cpp  MidpointDisplacement.h
DefaultApp/Sources/Procedural/TerrainTech/: Technique.cpp  Technique.h  TerrainTechnique.cpp  TerrainTechnique.h
DefaultApp/Sources/Utils/: Utility.h
DefaultApp/Sources/Window/: OGLWindow.cpp  OGLWindow.h
MiniMotor/: CMakeLists.txt
MiniMotor/Sources/Components/Private/: Component.cpp  RenderableComponent.cpp
MiniMotor/Sources/Components/Public/: Component.h  RenderableComponent.h
MiniMotor/Sources/Core/Private/: BaseApplication.cpp  Scene.cpp
MiniMotor/Sources/Core/Public/: BaseApplication.h  Core.h  CoreMinimal.h  Delegate.h  Scene.h
MiniMotor/Sources/Objects/Private/: Entity.cpp  Object.cpp
MiniMotor/Sources/Objects/Public/: Entity.h  Object.h
